# SynthSeg

./: Dockerfile  pyproject.toml
.github/workflows/: push_container.yml
