[tool.poetry]
name = "synthseg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
keras = "2.3.1"
nibabel = "^4.0.2"
Pillow = "^9.2.0"
matplotlib = "^3.6.1"
tqdm = "^4.64.1"
sklearn = "^0.0"
ipython = "^8.5.0"
scipy = "1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
